Rewrote the Queue to use ArrayDeque internally