@@ -1,17 +1,17 @@
 package com._604robotics.utils;
 
+import java.util.ArrayDeque;
 import java.util.Iterator;
-import java.util.Vector;
 
 public class BoolFIFOPopQueue
 {
-    private Vector content;
+    private ArrayDeque<Boolean> content;
     public final int maxsize;
     public final double fraction;
 
     public BoolFIFOPopQueue(int maxsize, double fraction)
     {
-        this.content=new Vector(maxsize);
+        this.content=new ArrayDeque<Boolean>(maxsize);
         this.maxsize=maxsize;
         this.fraction=fraction;
     }
@@ -24,50 +24,38 @@ public class BoolFIFOPopQueue
     public boolean isEmpty()
     {
         // TODO Auto-generated method stub
-        return content.size()==0;
+        return content.isEmpty();
     }
     
     public boolean isFull()
     {
-        return content.size()==size();
+        return content.size()==this.maxsize;
     }
     
     public void remove()
     {
         // TODO Auto-generated method stub
-        this.content.remove(content.size()-1);
-    }
-    
-    public void removeAll()
-    {
-        // TODO Auto-generated method stub
-        this.content.removeAllElements();
-    }
-    
-    public void clear()
-    {
-        this.removeAll();
+        content.removeLast();
     }
 
     public void add(boolean element)
     {
         // TODO Auto-generated method stub
-        boolean[] elarray={element};
         if (this.size()<=this.maxsize)
         {
-            this.content.add(0,element);
+            content.addFirst(element);
         }
         else
         {
-            this.remove();
-            this.content.add(0,element);
+            remove();
+            content.addFirst(element);
         }
     }
     
     public boolean passThreshold()
     {
         int count=0;
-        Iterator countloop=this.content.iterator();
+        Iterator<Boolean> countloop=this.content.iterator();
         while(countloop.hasNext())
         {
             if ((boolean) countloop.next())
